--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=9001
 
+spring.datasource.url=jdbc:mysql://localhost:3306/flowers?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=@2C760aF4..
+
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
