--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=@2C760aF4..
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/flower/api-docs.html
+
+
